--- a/srs-320/main.tex
+++ b/srs-320/main.tex
@@ -279,7 +279,7 @@ INTENDED AUDIENCE}
 ABBREVIATIONS]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 DEFINITIONS, ACRONYMS, AND ABBREVIATIONS}
 {\selectlanguage{english}\rmfamily\color{black}
-The product's name is Health.e standing for Health Electronics, as it is designed to digitize information on health inspections, well water and septic tanks.}
+The product's name is Health.e standing for Health Electronics, as it is designed to digitize information on health inspections, well water reports and septic tank pumpings.}
 \newline
 \begin{flushleft}
 \tablehead{}
@@ -327,7 +327,7 @@ FUNCTIONS]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 PRODUCT FUNCTIONS}
 \subsubsection{Data Entry (Forms)}
 \begin{enumerate}
-\item{The user chooses one of the following inspection forms to fill in: restaurant, septic tank, or water well.}
+\item{The user chooses one of the following data forms to fill in: restaurant, septic tank, or water well.}
 \item{The tablet then displays the chosen form to the user with blank, fillable forms.}
 \end{enumerate}
 \subsubsection{Browsing \& Search}
@@ -442,13 +442,13 @@ DATA ENTRY (FORMS)}
 
 \subsubsection{\textit{Use Case 1}}
 
-\textit{Title: }{\selectlanguage{english}\bfseries\color{black} Fill out septic tank inspection form}
+\textit{Title: }{\selectlanguage{english}\bfseries\color{black} Fill out septic tank pumping data form}
 
 {\selectlanguage{english}\color{black} \textit{Primary Actor:} User}
 
 {\selectlanguage{english}\color{black} \textit{Secondary Actor:} System}
 
-{\selectlanguage{english}\color{black} \textit{Trigger:} User selects septic inspection form.}
+{\selectlanguage{english}\color{black} \textit{Trigger:} User selects septic pumping data form.}
 
 {\selectlanguage{english}\color{black} \textit{Precondition:} User  successfully logged in and accessed the form entry user interface for the septic tank.}
 
@@ -946,9 +946,9 @@ Data from three six objects and their respective fields are collected from the u
 \end{figure}
 
 \subsection{DATA OBJECTS}
-Three different data objects and their fields are stored in the database; septic inspection form, water well inspection form, and restaurant inspection forms.  Users use search object and its field to query the database.
+Three different data objects and their fields are stored in the database; septic pumping form, water well inspection form, and restaurant inspection forms.  Users use search object and its field to query the database.
 \begin{itemize}
-\item{Septic tank:}  Septic tank objects holds fields and data from septic tank inspection forms.  These objects are stored in the database and can retrieved using search options.
+\item{Septic tank:}  Septic tank objects holds fields and data from septic tank pumping forms.  These objects are stored in the database and can retrieved using search options.
 
 \item{Water Well:} Water well object holds fields and data from water well inspection forms.  These objects are stored in the database and can retrieved using search options.
 
