--- a/srs-320/main.tex
+++ b/srs-320/main.tex
@@ -1056,12 +1056,15 @@ Complete test report & 12/8 - 12/11 \\
 \item{Expand location}
 \item{Smart watch application/feature}
 \item{Additional OS Support}
+\item{Support for additional data objects}
+\item{Support for revised data objects upon regulation revisions}
 \end{itemize}
 {\selectlanguage{english}\rmfamily\color{black}
-Software is currently localized to two specific towns.  The application can be extended to cover more towns and locations in the future.
-Search and browse functions in the software currently supports keypad and mouse/finger interface.  Future extension can include a user voice interface as well. 
+Software is currently localized to two specific towns.  The application can be extended to cover more towns and locations in the future. They system can also be revised to support additional data objects (eg. swimming pool inspections, summer camp facilities, housing regulations reports). It can also be modified to add or update revised regulations as they come out.
+Search and browse functions in the software currently support keypad and mouse/finger interface but future extensions could include a user voice interface as well. 
 Software can be extended to possibly include full support as a smartwatch application. 
-Software currently supports Android OS.  It can support other operating systems in the future.}
+Software currently supports Android OS. It can support other operating systems in the future.}
+
 
 \clearpage\section[APPENDIX A. \ Example Screens]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 APPENDIX A. \ Example Screens}
